--- a/biyesheji/src/main/resources/templates/index.html
+++ b/biyesheji/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link href="./assets/images/favicon.ico" rel="icon">
-    <title>嘉园小区物业管理系统</title>
+    <title>小区物业管理系统</title>
     <link rel="stylesheet" href="./assets/libs/layui/css/layui.css"/>
     <link rel="stylesheet" href="./assets/module/admin.css?v=315"/>
     <!--[if lt IE 9]>
@@ -19,7 +19,7 @@
     <div class="layui-header">
         <div class="layui-logo">
             <img src="./assets/images/logo.png"/>
-            <cite>嘉园小区物业</cite>
+            <cite>小区物业</cite>
         </div>
         <ul class="layui-nav layui-layout-left">
             <li class="layui-nav-item" lay-unselect>
@@ -116,11 +116,7 @@
 
     <!-- 主体部分 -->
     <div class="layui-body"></div>
-    <!-- 底部 -->
-    <div class="layui-footer">
-        copyright © 2019 <a target="_blank">东莞理工学院城市学院</a> all rights reserved.
-        <span class="pull-right">Version 1.0.0</span>
-    </div>
+
 </div>
 
 <!-- 加载动画 -->
